--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Title of the document</title>
 </head>
 
-<body>
+<body style="background-color: #000000">
 Content of the document......
 </body>
 
