--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Title of the document</title>
+<title>
+A Simple HTML Document
+</title>
 </head>
-
-<body style="background-color: #000000">
-Content of the document......
+<body>
+<p>This is a very simple HTML document</p>
+<p>It only has two paragraphs</p>
 </body>
-
 </html>
