--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ A Simple HTML Document
 </title>
 </head>
 <body>
-<p>This is a very simple HTML document</p>
+<h1>This is a very simple HTML document</h1>
 <p>It only has two paragraphs</p>
 </body>
 </html>
