--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
           <div class="col-md-6">
             <h2 class="top-page">ZAC BURRAGE</h2>
-            <h4 class="under">ASPIRING FRONT END NINJA</h4>
+            <h4 class="under">FRONT END NINJA</h4>
           </div>
         </div>
       </div>
@@ -53,10 +53,10 @@
       <div class="row">
         <div class="col-md-4">
           <article>
-            <a href="https://github.com/zdburrage/ud036_StarterCode"> <img class="img-responsive row-img" src="images/FirstProject.png" alt="Project picture"></a>
+            <a href="https://github.com/zdburrage"> <img class="img-responsive row-img" src="images/FirstProject.png" alt="Project picture"></a>
               <h2>I'm Getting a NanoDegree!</h2>
               <p>
-                <a href="https://github.com/zdburrage/ud036_StarterCode">Check out my First Project!</a>
+                <a href="https://github.com/zdburrage">Check out my Github!</a>
               </p>
           </article>
         </div>
@@ -72,9 +72,9 @@
         <div class="col-md-4">
           <article>
             <img class ="img-responsive row-img" src="https://www.underconsideration.com/brandnew/archives/att_2016_logo_with_type.png" alt="AT&T Logo">
-            <h2>I work at AT&T!</h2>
+            <h2>I work at American Airlines!</h2>
             <p>
-              <a href="https://www.att.com/">Switch Today!</a>
+              <a href="https://www.aa.com/">Book a Flight Today!</a>
             </p>
           </article>
         </div>
@@ -86,7 +86,7 @@
         <div class="col-md-12">
           <footer>
             <p>Posted by: Zachary Daniel Burrage</p>
-            <p>Contact information: <a href="mailto:someone@example.com">
+            <p>Contact information: <a href="mailto:zac.burrage@gmail.com">
             zac.burrage@gmail.com</a>.</p>
           </footer>
         </div>
